test/core/errors/templates_error/zs/duplicated_field_name_error.zs
package duplicated_field_name_error;

struct TestStruct<T>
{
    T value;
    T value;
};

struct DuplicatedFieldName
{
    TestStruct<uint32> test;
};
